adding etl module with postgresql connector to ec2

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -3,57 +3,28 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import psycopg2\n",
-    "from sshtunnel import SSHTunnelForwarder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tunnel connected\n",
-      "database connected\n"
-     ]
-    }
-   ],
-   "source": [
-    "tunnel = SSHTunnelForwarder(\n",
-    "     ('ec2-3-9-28-102.eu-west-2.compute.amazonaws.com', 22),\n",
-    "     ssh_private_key='/home/daniel/.ssh/aws_uk_laptop.pem',\n",
-    "     ssh_username='ubuntu',\n",
-    "     remote_bind_address=('localhost', 5432)\n",
-    ") \n",
-    "\n",
-    "tunnel.start()\n",
-    "print(\"tunnel connected\")\n",
-    "\n",
-    "params = {\n",
-    "    'database': 'eicu',\n",
-    "    'user': 'eicu',\n",
-    "    'password': 'eicu',\n",
-    "    'host': tunnel.local_bind_host,\n",
-    "    'port': tunnel.local_bind_port\n",
-    " }\n",
-    "\n",
-    "conn = psycopg2.connect(**params)\n",
-    "curs = conn.cursor()\n",
-    "print (\"database connected\")"
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from proto.etl.config import SSHInfoEicu, DBInfoEicu\n",
+    "from proto.etl.utils import connect_to_db_via_ssh\n",
+    "conn = connect_to_db_via_ssh(SSHInfoEicu, DBInfoEicu)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +184,7 @@
        "4         0.0                                      22008  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +199,7 @@
     "order by drugoffset\n",
     "\"\"\".format(patientunitstayid)\n",
     "\n",
-    "df = pd.read_sql_query(query, con)\n",
+    "df = pd.read_sql_query(query, conn)\n",
     "df.head()"
    ]
   },
