small update to feature creation

--- a/notebooks/03_mortality_pred_dataset.ipynb
+++ b/notebooks/03_mortality_pred_dataset.ipynb
@@ -183,8 +183,8 @@
     "    - age,\n",
     "    - region - embedded - 2\n",
     "    - apache_groups - embedded - 3\n",
-    "    - apacheapsvars - imputed\n",
-    "    - apachepredvars - imputed\n",
+    "    - apacheapsvars - [imputed](https://scikit-learn.org/stable/modules/generated/sklearn.impute.IterativeImputer.html)\n",
+    "    - apachepredvars - imputed (same as above)\n",
     "    - labsfirstday - imputed\n",
     "    - diagnoses - embedded and averaged\n",
     "3. Create time bucketed features. Here we deal with missing values by carrying forward the previous measurement, or in case of the first measurement, carrying that all the way back to the admission time.\n",
@@ -200,15 +200,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_table_completeness(table):\n",
     "    \"\"\"\n",
     "    Quick helper that return column completeness for a table. \n",
-    "    Note, it join on patients we're interested in for mort pred\n",
-    "    and restricts for the first 24 hours.\n",
+    "    Note, it join on patients we're interested in for mortality\n",
+    "    pred and restricts for the first 24 hours.\n",
     "    \"\"\"\n",
     "    \n",
     "    query = \"\"\"\n",
