--- a/notebooks/03_mortality_pred_dataset.ipynb
+++ b/notebooks/03_mortality_pred_dataset.ipynb
@@ -11,9 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -29,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,34 +268,34 @@
    "source": [
     "### Create one row per patient features\n",
     "\n",
-    "Start with the basic ones"
+    "Start with the basic stay level variables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from sklearn.impute import SimpleImputer"
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.experimental import enable_iterative_imputer\n",
+    "from sklearn.impute import IterativeImputer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "query = \"\"\"\n",
     "select\n",
     "       i.patientunitstayid,\n",
-    "       gender,\n",
-    "       age,\n",
     "       admissionheight,\n",
     "       admissionweight,\n",
     "       ethnicity,\n",
-    "       region,\n",
+    "       region as hospital_region,\n",
     "       unittype,\n",
     "       apachedxgroup\n",
     "from (select patientunitstayid from patient_top5hospitals_mort_dataset) p\n",
@@ -300,119 +309,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "# add vars to numerical and non-numerical lists\n",
     "num_vars = [\n",
-    "    'gender',\n",
-    "    'age',\n",
     "    'admissionheight',\n",
     "    'admissionweight',\n",
     "]\n",
     "cat_vars = [\n",
     "    'ethnicity',\n",
-    "    'region',\n",
+    "    'hospital_region',\n",
     "    'unittype',\n",
     "    'apachedxgroup'\n",
     "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "patientunitstayid    100.000000\n",
-       "gender                99.975856\n",
-       "age                  100.000000\n",
-       "admissionheight       99.257560\n",
-       "admissionweight       92.358303\n",
-       "ethnicity            100.000000\n",
-       "region                89.261785\n",
-       "unittype             100.000000\n",
-       "apachedxgroup        100.000000\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# check data completeness\n",
-    "(1-df_basic.isnull().sum(axis=0)/df_basic.shape[0])*100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "SimpleImputer(copy=True, fill_value=None, missing_values=nan,\n",
-       "       strategy='most_frequent', verbose=0)"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "imp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# make age numerical by replacing > 89 with 90\n",
-    "df_basic.age[df_basic.age == '> 89'] = 90\n",
-    "df_basic.age = df_basic.age.astype(np.int)\n",
-    "\n",
-    "# Impute categorical missing data in the simples way\n",
-    "df_basic_cat = df_basic.loc[:, cat_vars]\n",
-    "imp = SimpleImputer(strategy=\"most_frequent\")\n",
-    "df_basic.loc[:, cat_vars] = imp.fit_transform(df_basic_cat.astype('category'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "patientunitstayid    100.000000\n",
-       "gender                99.975856\n",
-       "age                  100.000000\n",
-       "admissionheight       99.257560\n",
-       "admissionweight       92.358303\n",
-       "ethnicity            100.000000\n",
-       "region               100.000000\n",
-       "unittype             100.000000\n",
-       "apachedxgroup        100.000000\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(1-df_basic.isnull().sum(axis=0)/df_basic.shape[0])*100"
    ]
   },
   {
@@ -424,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,87 +349,83 @@
     "left join labsfirstday l\n",
     "on p.patientunitstayid=l.patientunitstayid\n",
     "\"\"\"\n",
-    "df_apache_labs = run_eicu_query(query, conn)"
+    "df_apache_labs = run_eicu_query(query, conn)\n",
+    "# get rid off duplicated unitstayid cols\n",
+    "df_apache_labs = df_apache_labs.loc[:,~df_apache_labs.columns.duplicated()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_apache_labs"
+    "# add numeric cols to the num vars\n",
+    "float_cols = df_apache_labs.dtypes == 'float64'\n",
+    "non_id_cols = ~df_apache_labs.columns.str.endswith('id')\n",
+    "num_vars += list(df_apache_labs.columns[(float_cols & non_id_cols).ravel()].values)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Merge apache_lab and basic tables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "patientunitstayid    100.000000\n",
-       "apacheapsvarid        92.328122\n",
-       "patientunitstayid     92.328122\n",
-       "intubated             92.328122\n",
-       "vent                  92.328122\n",
-       "dialysis              92.328122\n",
-       "eyes                  92.328122\n",
-       "motor                 92.328122\n",
-       "verbal                92.328122\n",
-       "meds                  92.328122\n",
-       "urine                 92.328122\n",
-       "wbc                   92.328122\n",
-       "temperature           92.328122\n",
-       "respiratoryrate       92.328122\n",
-       "sodium                92.328122\n",
-       "heartrate             92.328122\n",
-       "meanbp                92.328122\n",
-       "ph                    92.328122\n",
-       "hematocrit            92.328122\n",
-       "creatinine            92.328122\n",
-       "albumin               92.328122\n",
-       "pao2                  92.328122\n",
-       "pco2                  92.328122\n",
-       "bun                   92.328122\n",
-       "glucose               92.328122\n",
-       "                        ...    \n",
-       "chloride_max          96.191224\n",
-       "glucose_min           96.245548\n",
-       "glucose_max           96.245548\n",
-       "hematocrit_min        97.706284\n",
-       "hematocrit_max        97.706284\n",
-       "hemoglobin_min        97.682139\n",
-       "hemoglobin_max        97.682139\n",
-       "lactate_min           43.822056\n",
-       "lactate_max           43.822056\n",
-       "platelet_min          97.657995\n",
-       "platelet_max          97.657995\n",
-       "potassium_min         98.201243\n",
-       "potassium_max         98.201243\n",
-       "ptt_min               56.021006\n",
-       "ptt_max               56.021006\n",
-       "inr_min               70.869801\n",
-       "inr_max               70.869801\n",
-       "pt_min                70.869801\n",
-       "pt_max                70.869801\n",
-       "sodium_min            96.275729\n",
-       "sodium_max            96.275729\n",
-       "bun_min               96.155007\n",
-       "bun_max               96.155007\n",
-       "wbc_min               97.609706\n",
-       "wbc_max               97.609706\n",
-       "Length: 121, dtype: float64"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "(1-df_apache_labs.isnull().sum(axis=0)/df_apache_labs.shape[0])*100"
+    "df_basic_apache_labs = df_basic.set_index('patientunitstayid').join(df_apache_labs.set_index('patientunitstayid'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "Impute missing values both for categorical vars (simple mode), and numerical vars (multivariate imputation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df_basic_apache_labs\n",
+    "\n",
+    "# make age numerical by replacing > 89 with 90\n",
+    "df.age[df.age.isnull()] = 90\n",
+    "df.age = df.age.astype(np.int)\n",
+    "\n",
+    "# Impute categorical missing data in the simples way\n",
+    "imp = SimpleImputer(strategy=\"most_frequent\")\n",
+    "df[cat_vars] = imp.fit_transform(df[cat_vars].astype('category'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Impute missing values for numerical variables too using iterative imputer\n",
+    "imp = IterativeImputer()\n",
+    "df[num_vars] = imp.fit_transform(df[num_vars].values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[cat_vars + num_vars].to_csv('one_row_per_patient_vars.csv')"
    ]
   }
  ],
