making regression demo work too

--- a/notebooks/02_schema_exploration.ipynb
+++ b/notebooks/02_schema_exploration.ipynb
@@ -34,8 +34,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from proto.etl.config import SSHInfoEicu, DBInfoEicu\n",
-    "from proto.etl.utils import connect_to_db_via_ssh, run_eicu_query, get_column_completeness, load_schema_for_modelling\n",
+    "from neoglia.etl.config import SSHInfoEicu, DBInfoEicu\n",
+    "from neoglia.etl.utils import connect_to_db_via_ssh, run_eicu_query, get_column_completeness, load_schema_for_modelling\n",
     "\n",
     "conn = connect_to_db_via_ssh(SSHInfoEicu, DBInfoEicu)\n",
     "cursor = conn.cursor()\n",
