--- a/notebooks/04_orpp_icustay_model.ipynb
+++ b/notebooks/04_orpp_icustay_model.ipynb
@@ -36,8 +36,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from proto.etl.config import SSHInfoEicu, DBInfoEicu\n",
-    "from proto.etl.utils import connect_to_db_via_ssh, run_eicu_query, get_column_completeness, load_schema_for_modelling\n",
+    "from neoglia.etl.config import SSHInfoEicu, DBInfoEicu\n",
+    "from neoglia.etl.utils import connect_to_db_via_ssh, run_eicu_query, get_column_completeness, load_schema_for_modelling\n",
     "conn = connect_to_db_via_ssh(SSHInfoEicu, DBInfoEicu)\n",
     "cursor = conn.cursor()\n",
     "query_schema = 'set search_path to eicu_crd;'"
