--- a/notebooks/06_create_federated_eicu_dataset.ipynb
+++ b/notebooks/06_create_federated_eicu_dataset.ipynb
@@ -11,18 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -31,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,8 +50,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from proto.etl.config import SSHInfoEicu, DBInfoEicu\n",
-    "from proto.etl.utils import connect_to_db_via_ssh, run_eicu_query, get_column_completeness, load_schema_for_modelling\n",
+    "from neoglia.etl.config import SSHInfoEicu, DBInfoEicu\n",
+    "from neoglia.etl.utils import connect_to_db_via_ssh, run_eicu_query, get_column_completeness, load_schema_for_modelling\n",
     "\n",
     "conn = connect_to_db_via_ssh(SSHInfoEicu, DBInfoEicu)\n",
     "cursor = conn.cursor()\n",
@@ -76,30 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# get the hospital id for the patients in the top5 hospitals\n",
-    "query = \"\"\"\n",
-    "    select m.patientunitstayid, hospitalid\n",
-    "    from patient_top5hospitals_mort_dataset as m\n",
-    "    join\n",
-    "        (\n",
-    "        select hospitalid, patientunitstayid\n",
-    "        from patient\n",
-    "        ) as p\n",
-    "    on\n",
-    "        p.patientunitstayid=m.patientunitstayid\n",
-    "\"\"\"\n",
-    "\n",
-    "df_hospitals = run_eicu_query(query, conn)\n",
-    "df_hospitals.set_index('patientunitstayid', inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +134,7 @@
        "4         176  4328"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +154,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get the hospital id and outcomes for the patients in the top5 hospitals\n",
+    "query = \"\"\"\n",
+    "    select m.patientunitstayid, hospitalid, m.hosp_mort, icu_los_hours\n",
+    "    from patient_top5hospitals_mort_dataset as m\n",
+    "    join\n",
+    "        (\n",
+    "        select hospitalid, patientunitstayid\n",
+    "        from patient\n",
+    "        ) as p\n",
+    "    on\n",
+    "        p.patientunitstayid=m.patientunitstayid\n",
+    "    join\n",
+    "        (\n",
+    "        select patientunitstayid, hosp_mort, icu_los_hours\n",
+    "        from icustay_detail\n",
+    "        ) as d\n",
+    "    on\n",
+    "        m.patientunitstayid=d.patientunitstayid\n",
+    "\"\"\"\n",
+    "\n",
+    "df_hospitals = run_eicu_query(query, conn)\n",
+    "df_hospitals.set_index('patientunitstayid', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,26 +200,42 @@
     "df.hospitalid[df.hospitalid==176] = 4\n",
     "\n",
     "# only keep numeric cols and hospitalid\n",
-    "cols_to_keep = df.columns[list(range(4,107)) + [-1]]\n",
-    "df = df[cols_to_keep]\n",
+    "cols_to_keep = df.columns[list(range(4,107)) + [-3]]\n",
+    "df_x = df[cols_to_keep]\n",
     "\n",
     "# save the X matrix\n",
-    "df.to_csv('../src/proto/workers/x.csv', index=False)"
+    "df_x.to_csv('../src/neoglia/workers/x.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create the y outcome csv\n",
-    "df_y = pd.read_csv('mort_y.csv', index_col=0)\n",
-    "\n",
-    "# make sure we have the patients in the same order\n",
-    "sum(df_y.index.values == df.index.values) == df.shape[0]\n",
-    "\n",
-    "df_y.to_csv('../src/proto/workers/y.csv', index=False)"
+    "df_y = df[['hosp_mort', 'icu_los_hours']]\n",
+    "df_y.to_csv('../src/neoglia/workers/y.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(df_y.index == df_x.index) == df_x.shape[0]"
    ]
   },
   {
